# PCSC_ImageProcessing

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  TODO.md  test_image.cpp  test_pixels.cpp
apps/: CMakeLists.txt  test_pixels.cpp
html/: _image_8hh_source.html  _my_exceptions_8hh_source.html  _pixel_8hh_source.html  annotated.html  class_abstract_reader-members.html  class_abstract_reader.html  class_abstract_writer-members.html  class_abstract_writer.html  class_compute-members.html  class_compute.html  class_compute_histogram-members.html  class_compute_histogram.html  class_contour__extraction-members.html  class_contour__extraction.html  class_contour_extraction-members.html  class_contour_extraction.html  class_d_f_t-members.html  class_d_f_t.html  class_f_f_t-members.html  class_f_f_t.html  class_filter-members.html  class_filter.html  class_fourier_transform-members.html  class_fourier_transform.html  class_gaussian_filter-members.html  class_gaussian_filter.html  class_image-members.html  class_image.html  class_invalid_dim_exception-members.html  class_invalid_dim_exception.html  class_min_image_size_exception-members.html  class_min_image_size_exception.html  class_negative_dim_exception-members.html  class_negative_dim_exception.html  class_negative_exception-members.html  class_negative_exception.html  class_negative_pixel_value_exception-members.html  class_negative_pixel_value_exception.html  class_p_p_m_reader-members.html  class_p_p_m_reader.html  (+30 more)
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  related_0.js  searchdata.js  (+2 more)
in/: Gtest.ppm  fleur.ppm  test.txt  test_photo.ppm
src/: CMakeLists.txt  Image.cpp  Image.hh  MyExceptions.hh  Pixel.cpp  Pixel.hh  compute.cpp  compute.hh  draft.cpp  histogram.cpp  image_processor.cpp  plot_histogram.cpp  plot_histogram.hh  reader.cpp  reader.hh  transform.cpp  transform.hh  writer.cpp  writer.hh
tests/: example_histogram.cpp  test_FT.cpp  test_Filter.cpp  test_IO.cpp  test_compute.cpp  test_histogram.cpp  test_image.cpp  test_pixels.cpp  test_transform.cpp  test_writer.cpp
